[package]
name = "hdjf2023-codetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.5"
libaes = "0.7.0"
regex = "1.10.2"
reqwest = "0.11.22"
scraper = "0.17.1"
serde = "1.0.189"
serde_json = "1.0.107"
text_io = "0.1.12"
tokio = { version = "1.33.0", features = ["macros"] }
